# unsigned-char

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  release-notes.md  tsconfig.json  vite.config.ts
.github/workflows/: frontend_ci.yml  release.yml  rust_ci.yml
benchmarks/speaker-id/: .gitignore  README.md  label.py  report.py  requirements.txt  score.py  stitch.py
scripts/: build-updater-manifest.mjs  debug-app.mjs
src/: index.css  main.ts  main.tsx  router.tsx  store.ts  styles.css  updates.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: uchar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/scripts/: pyannote_diarize.py
src-tauri/src/: asr.rs  audio_capture.rs  cli.rs  lib.rs  logging.rs  permissions.rs  speech_models.rs
src-tauri/swift-permissions/: Package.swift
src-tauri/swift-permissions/src/: lib.swift  speech_bridge.swift
src/components/: number-field.tsx  ui.tsx
src/components/ui/: button.tsx  input.tsx
src/hooks/: useNativeContextMenu.ts
src/lib/: summary-providers.ts
